MDEV-26274 fts_lock_table() attempts to release unreserved dict_sys.mutex

fts_lock_table(): Fix a regression that was introduced in
commit da65cb4d97fbd55411dd08108ecc2cf72712851d (MDEV-25936).